<?xml version="1.0"?>
<package format="3">
  <name>ekf_fusion</name>
  <version>0.0.1</version>
  <description>EKF Fusion package for UWB and IMU</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

